ingredients and methods overloading

--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -75,7 +75,7 @@
                                 {% for ingredient in recipes.ingredients %}
                                 <li>
                                     <span>{{ingredient.amount}} {{ingredient.measurement}}
-                                        {{ingredient.measurement}}</span>
+                                        {{ingredient.ingredient}}</span>
                                 </li>
                                 {% endfor %}
                             </ul>
