--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -110,7 +110,7 @@
                     <label for="ingredient">Ingredient</label>
                 </div>
                 <div>
-                    <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light red"><i
+                    <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light blue-tint"><i
                             class="material-icons">add</i></a>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                     </label>
                 </div>
                 <div>
-                    <a id='add-met' class="btn-floating btn-medium waves-effect waves-light red"><i
+                    <a id='add-met' class="btn-floating btn-medium waves-effect waves-light blue-tint"><i
                             class="material-icons">add</i></a>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                         <span><strong>difficulty: </strong><span><u id="display-rating"></u></span></span>
                     </div>
                     <div class="col s2">
-                        <a id="edit-info" class="btn-floating btn-small red">
+                        <a id="edit-info" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -219,7 +219,7 @@
                         <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="display-img" name="display-img" class="" height="150px" width="150px">
                     </div>
                     <div class="col s2">
-                        <a id="edit-image" class="btn-floating btn-small red">
+                        <a id="edit-image" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="col s2">
-                        <a id="edit-ingredients" class="btn-floating btn-small red">
+                        <a id="edit-ingredients" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -241,7 +241,7 @@
                         <ol id="display-method"></ol>
                     </div>
                     <div class="col s2">
-                        <a id="edit-methods" class="btn-floating btn-small red">
+                        <a id="edit-methods" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
