--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -14,7 +14,7 @@
                         <span><strong>weblink: </strong><span id="display-weblink">{{recipes.weblink}}</span></span>
                     </div>
                     <div class="col s2">
-                        <a id="edit-info-btn" class="btn-floating btn-small red">
+                        <a id="edit-info-btn" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -64,7 +64,7 @@
                             height="150px">
                     </div>
                     <div class="col s2">
-                        <a id="edit-img-btn" class="btn-floating btn-small red">
+                        <a id="edit-img-btn" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="col s2">
-                        <a id="edit-ing-btn" class="btn-floating btn-small red">
+                        <a id="edit-ing-btn" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -99,7 +99,7 @@
                         </ol>
                     </div>
                     <div class="col s2">
-                        <a id="edit-met-btn" class="btn-floating btn-small red">
+                        <a id="edit-met-btn" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
@@ -243,7 +243,7 @@
                         <label for="ingredient">Ingredient</label>
                     </div>
                     <div>
-                        <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light red"><i
+                        <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light blue-tint"><i
                                 class="material-icons">add</i></a>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                         </label>
                     </div>
                     <div>
-                        <a id='add-met' class="btn-floating btn-medium waves-effect waves-light red"><i
+                        <a id='add-met' class="btn-floating btn-medium waves-effect waves-light blue-tint"><i
                                 class="material-icons">add</i></a>
                     </div>
                 </div>               
