--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -69,7 +69,7 @@
   </div>
   
 <div class="fixed-action-btn">
-  <a class="btn-floating btn-large red">
+  <a class="btn-floating btn-large blue-tint ">
     <i class="large material-icons">build</i>
   </a>
   <ul>    
