--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,7 +8,7 @@
         <div class="card-image">
           <img src="{{url_for('file', filename=recipe['image'])}}" width="250px" height="250px">
           <span class="card-title"></strong></span>
-          <a href="{{url_for('recipe', recipe_id=recipe._id)}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          <a href="{{url_for('recipe', recipe_id=recipe._id)}}" class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
           <p><strong>{{recipe.recipe_name}}</strong></p>
