--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -151,7 +151,7 @@
             </div>
             <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="preview" width="150px" height="150px">
             <br>
-            <a id='pic-upload' class="waves-effect waves-light btn-small"><i
+            <a id='pic-upload' class="waves-effect waves-light btn btn-small"><i
                     class="material-icons left">add_a_photo</i>Upload
                 an image</a>
             <br>
@@ -169,7 +169,7 @@
                 <h3>review recipe:</h3>
             </div>
             <div>
-                <a id="refresh" class="btn-floating btn-large waves-effect waves-light red"><i
+                <a id="refresh" class="btn-floating btn-small waves-effect waves-light red"><i
                         class="material-icons">refresh</i></a>
             </div>
             <div class="container" id="recipe-info">
