--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 <div class="row">
-    <h3> Categories</h3>
+    <h5>Pick your category:</h5>
 <div class="row">
  {% for category in categories %}
     <div class="col s12 m6 l4">
