--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -69,13 +69,13 @@
   </div>
   
 <div class="fixed-action-btn">
-  <a class="btn-floating btn-large blue-tint ">
+  <a class="btn-floating btn-large blue-tint pulse">
     <i class="large material-icons">build</i>
   </a>
   <ul>    
-    <li><a class="btn-floating yellow darken-1 tooltipped" data-position="left" data-tooltip="Edit recipe" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"><i class="material-icons">mode_edit</i></a></li>
-    <li><a class="btn-floating green tooltipped" data-position="left" data-tooltip="Delete recipe"><i class="material-icons">delete_forever</i></a></li>
-    <li><a class="btn-floating blue tooltipped" data-position="left" data-tooltip="Add New Recipe" href="{{ url_for('add_recipe') }}"><i class="material-icons">post_add</i></a></li>
+    <li><a class="btn-floating orange darken-1 tooltipped" data-position="left" data-tooltip="Edit recipe" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"><i class="material-icons">mode_edit</i></a></li>
+    <li><a class="btn-floating red tooltipped" data-position="left" data-tooltip="Delete recipe" href="{{ url_for('delete_recipe', recipe_id=recipe._id)}}"><i class="material-icons">delete_forever</i></a></li>
+    <li><a class="btn-floating green tooltipped" data-position="left" data-tooltip="Add New Recipe" href="{{ url_for('add_recipe') }}"><i class="material-icons">post_add</i></a></li>
   </ul>
 </div>
   
