--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif;
 }
 
 img {
