--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
       <div class="card">
         <div class="card-image">
           <img src="{{category.image}}" width="250px" height="250px">
-          <span class="card-title"></strong></span>
+          <span class="card-title"></span>
           <a href="{{url_for('get_recipes', category_name=category['category_name'])}}" class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
