adding back buttons for easire nav when creating

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -123,6 +123,11 @@
                         class="material-icons left">arrow_forward</i>Proceed
                     to Preparation Method</a>
             </div>
+            <br>
+            <br>
+            <div id='back-info'>
+                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to Recipe Info</a>
+            </div>
         </div>
     </div>
     <!--Add Method section-->
@@ -156,9 +161,15 @@
                 an image</a>
             <br>
             <br>
+            <br>
             <div id='review_recipe'>
                 <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Review
                     Recipe</a>
+            </div>
+            <br>
+            <br>
+            <div id='back-ingredients'>
+                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to ingredients</a>
             </div>
         </div>
     </div>
