--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,4 +150,35 @@ nav {
 
 .material-tooltip {
     background-color: #056B7E;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+/*-------------------------------Recipe review add and edit recipes------------------*/
+
+.recipe-review {
+    border: solid 1px #CD6604;
+    padding-left: 10px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    margin: 0px;
+    margin-right: 0;
+}
+
+#edit_preview {
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+#dpl-i {
+    margin-left: 10px;
 }
