--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -7,9 +7,9 @@
 
             <div class="input-field col s12 m6">
                 <select id="category" name="category_name" class="icons ">
-                    <option  disabled selected>Choose your Category</option>
+                    <option disabled selected>Choose your Category</option>
                     {% for cat in categories %}
-                    <option  data-icon="{{cat.image}}" class="left">{{cat.category_name}}</option>
+                    <option data-icon="{{cat.image}}" class="left">{{cat.category_name}}</option>
                     {% endfor %}
                 </select>
                 <label></label>
@@ -118,15 +118,16 @@
             <br>
             <br>
             <br>
+            <div id='back-info'>
+                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to
+                    Recipe Info</a>
+            </div>
+            <br>
+            <br>            
             <div>
                 <a id="add-met-btn" class="waves-effect waves-light btn"><i
                         class="material-icons left">arrow_forward</i>Proceed
                     to Preparation Method</a>
-            </div>
-            <br>
-            <br>
-            <div id='back-info'>
-                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to Recipe Info</a>
             </div>
         </div>
     </div>
@@ -148,28 +149,29 @@
                     <a id='add-met' class="btn-floating btn-medium waves-effect waves-light blue-tint"><i
                             class="material-icons">add</i></a>
                 </div>
-            </div>
+            </div>          
             <br>
+            <br>
+            <div id='back-ingredients'>
+                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to
+                    ingredients</a>
+            </div>                   
             <br>
             <div style="height:0px;overflow:hidden">
                 <input type="file" id="fileInput" name="fileInput" />
             </div>
-            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="preview" width="150px" height="150px">
+            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg"
+                id="preview" width="150px" height="150px">
             <br>
             <a id='pic-upload' class="waves-effect waves-light btn btn-small"><i
                     class="material-icons left">add_a_photo</i>Upload
                 an image</a>
-            <br>
+            <br>                 
             <br>
             <br>
             <div id='review_recipe'>
                 <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Review
                     Recipe</a>
-            </div>
-            <br>
-            <br>
-            <div id='back-ingredients'>
-                <a class="waves-effect waves-light btn back"><i class="material-icons left ">arrow_back</i>Back to ingredients</a>
             </div>
         </div>
     </div>
@@ -180,10 +182,11 @@
                 <h3>review recipe:</h3>
             </div>
             <div>
-                <a id="refresh" class="btn-floating btn-small waves-effect waves-light red"><i
+                <a id="refresh" class="btn-floating btn-small waves-effect waves-light red  tooltipped pulse" data-position="right" data-tooltip="Refresh page after changes"><i
                         class="material-icons">refresh</i></a>
             </div>
-            <div class="container" id="recipe-info">
+            <br>
+            <div class="recipe-review" id="recipe-info">
                 <h4><strong><u id="display-r-n"></u></strong></h4>
                 <div class="row">
                     <div class="col s5">
@@ -224,31 +227,34 @@
                 </div>
             </div>
             <br>
-            <div class="container">
+            <div >
                 <div class="row">
                     <div class="col s10 m3">
-                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="display-img" name="display-img" class="" height="150px" width="150px">
+                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg"
+                            id="display-img" name="display-img" class="" height="150px" width="150px">
                     </div>
-                    <div class="col s2">
+                    <div class="col s1">
                         <a id="edit-image" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
-                    <div class="col s10 m5">
+                    <div id="dpl-i" class="col s10 m6 recipe-review">
+                        <h6><u>ingredients</u></h6>
                         <div>
                             <ul id="display-ing"></ul>
                         </div>
                     </div>
-                    <div class="col s2">
+                    <div class="col s1">
                         <a id="edit-ingredients" class="btn-floating btn-small blue-tint">
                             <i class="large material-icons">mode_edit</i>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
+            <div class="recipe-review">
+                <div class="row">                    
                     <div class="col s10">
+                    <h6><u>methods</u></h6>
                         <ol id="display-method"></ol>
                     </div>
                     <div class="col s2">
@@ -269,6 +275,6 @@
     </div>
 </form>
 <script src="{{url_for('static', filename='js/add.js')}}" type='text/javascript'>
-    </script>
+</script>
 
 {% endblock %}
