--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -6,7 +6,7 @@
 <br>
 <div class="row">
   <div class="col s12 m3">
-    <img id="img-view" src="{{url_for('file', filename=recipe['image'])}}" width='150px' height='150px'>
+    <img id="img-view" src="{{url_for('file', filename=recipe['image'] or "https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg")}}" width='150px' height='150px'>
   </div>
   <div id="info" class="col s12 m9">
     <div class="recipe-view">
