--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,7 +7,7 @@
       <div class="card">
         <div class="card-image">
           <img src="{{url_for('file', filename=recipe['image'])}}" width="250px" height="250px">
-          <span class="card-title"></strong></span>
+          <span class="card-title"></span>
           <a href="{{url_for('recipe', recipe_id=recipe._id)}}" class="btn-floating halfway-fab waves-effect waves-light blue-tint"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
