extra end tag removed

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -160,7 +160,7 @@
             <div style="height:0px;overflow:hidden">
                 <input type="file" id="fileInput" name="fileInput" />
             </div>
-            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg"
+            <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580049398/ccRecipes/cc_logo_mmjt5c.png"
                 id="preview" width="150px" height="150px">
             <br>
             <a id='pic-upload' class="waves-effect waves-light btn btn-small"><i
@@ -207,7 +207,7 @@
                         <span><strong> prep time: </strong><span><u id="display-prep"></u><span>
                                     min</span></span></span>
                     </div>
-                    <div class="col s4"> <span><strong> cook time: </strong><span><u id="display-cook"></u><span></span>
+                    <div class="col s4"> <span><strong> cook time: </strong><span><u id="display-cook"></u><span>
                                 min</span></span></span>
                     </div>
                     <div class="col s4"> <span><strong> total time: </strong><span><u id="display-total"></u><span>
@@ -231,7 +231,7 @@
             <div>
                 <div class="row">
                     <div class="col s10 m3">
-                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg"
+                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1580049398/ccRecipes/cc_logo_mmjt5c.png"
                             id="display-img" name="display-img" class="" height="150px" width="150px">
                     </div>
                     <div class="col s1">
