--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,7 +111,7 @@ nav {
 }
 
 #cc-title {
-    font-style: Extra-Bold Italic;
+    font-style: Bold Italic;
     font-size: 50px;
     font-weight: 800;
     font-family: 'Playfair Display', serif;
